Chat module changes
